# baxter_workspace_csv_analyser

./: CMakeLists.txt  README.md  csv_custom_reader.launch  package.xml
results/: orientations_for_position_-0.414352_0.770312_0.805202.csv  orientations_for_position_-0.43257_0.796748_0.875537.csv
src/: csv_custom_reader.cpp
